# wasm_explore

./: .gitignore  Cargo.toml  Makefile  README.md
add/: Cargo.toml  Cargo_wasm.toml
add/src/: add.rs
add_function/: Cargo.toml
add_function/src/: add_function.rs
implementation/: Cargo.toml
implementation/src/: lib.rs  simulator.rs
main/: Cargo.toml  add_memory.wat
main/src/: loader.rs  main.rs  wasm.rs
rust_add/src/: add.rs
src/: add.rs  implementation.rs  main.rs  wasm.rs  wrapper.rs
wasm_impl_derive/: Cargo.toml
wasm_impl_derive/src/: lib.rs
wrapper/: Cargo.toml
wrapper/src/: lib.rs  wasm.rs  wasm_simulator.rs
