[package]
name = "main"
version = "0.1.0"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
edition = "2018"

[dependencies]
implementation = { path = "../implementation", version = "*" }
add = { path = "../rust_add", version = "*" }
wrapper = { path = "../wrapper", version = "*" }

serde = "~1.0.27"
serde_json = "1.0"
wasmi = "=0.4.2"
memory_units = "0.4"