[package]
name = "main"
version = "0.1.0"
authors = ["Andrew Mackenzie <andrew@mackenzie-serres.net>"]
edition = "2018"

[dependencies]
implementation = { path = "../implementation" }
add_function = { path = "../add_function" }
wrapper = { path = "../wrapper" }

serde = "~1.0.27"
serde_json = "1.0"
wasmi = "=0.4.2"
memory_units = "0.4"
rand = "0.7.0"